--- a/views/autenticar/index.ejs
+++ b/views/autenticar/index.ejs
@@ -9,11 +9,14 @@
 </head>
 <body>
     <form>
+        <div class="card">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <br/>
+          <div id="emailHelp" class="form-text">(Não compartilhe seu email com ninguém)</div>
         </div>
+
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
@@ -26,11 +29,7 @@
       </form>
 
 <br/>
-
-    <label for="inputPassword5" class="form-label">Password</label>
-    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-    <div id="passwordHelpBlock" class="form-text">
-      Sua senha deve conter de 8-20 caracteres, conter letras e números sem espaços
     </div>
+</div>
 </body>
 </html>
