--- a/views/autenticar/index.ejs
+++ b/views/autenticar/index.ejs
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <form action="/logar" method="post">
         <div class="card">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
